deps/v8/test/message/fail/class-field-constructor.out
*%(basename)s:6: SyntaxError: Classes may not have a field named 'constructor'
  constructor = function() {};
  ^^^^^^^^^^^
SyntaxError: Classes may not have a field named 'constructor'